Display stats for open/click rate on different screens.

--- a/subscriber_management/templates/list_list.html
+++ b/subscriber_management/templates/list_list.html
@@ -46,12 +46,12 @@
 					</div>
 					<div class='col-lg-2 col-sm-3'>
 						<h4 style='font-weight:300'>
-							53.4% opens
+              {{ list.open_rate|default:"0" }} opens
 						</h4>
 					</div>
 					<div class='col-lg-2 col-sm-3'>
 						<h4 style='font-weight:300'>
-							15.2% clicks
+              {{ list.open_rate|default:"0" }} clicks
 						</h4>
 					</div>
 				</div>
