--- a/campaign_management/templates/campaign_list.html
+++ b/campaign_management/templates/campaign_list.html
@@ -56,7 +56,7 @@
     <div class='row'>
       <div class='col-lg-12'>
 
-          {% for campaign in object_list %}
+          {% for campaign in all_campaigns %}
 						<div class='row' style='margin-bottom:3rem'>
 								<div class='col-lg-1 text-right'>
 									{% if campaign.is_sent %}
@@ -66,7 +66,6 @@
 									{% endif %}
 								</small>
 								</div>
-
 
 								<div class='col-lg-2'>
 									<a href="{% url 'campaign-detail' campaign.id %}" >
@@ -101,15 +100,15 @@
 												<span class='stat-label'>Sent</span>
 											</span>
 											<span class='stat-block'>
-												<span class='stat-count' >54.7%</span>
+												<span class='stat-count' >{{ campaign.open_rate|default_if_none:"N/A" }}</span>
 												<span class='stat-label' >Opens</span>
 											</span>
 											<span class='stat-block'>
-												<span class='stat-count'>35.3%</span>
+												<span class='stat-count' >{{ campaign.click_rate|default_if_none:"N/A" }}</span>
 												<span class='stat-label'>Clicks</span>
 											</span>
 											<span class='stat-block'>
-												<span class='stat-count'>4</span>
+												<span class='stat-count' >{{ campaign.unsubscribe_count|default:"0" }}</span>
 												<span class='stat-label'>Unsubscribes</span>
 											</span>
 										</div>
